--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -6,3 +6,75 @@ npm install -g pnpm
 ```
 ## 构建dashboard模版
 npx create-next-app@latest nextjs-dashboard --example "https://github.com/vercel/next-learn/tree/main/dashboard/starter-example" --use-pnpm
+
+
+## 创建 create-next-app --example 
+此命令使用 create-next-app，这是一个命令行界面 （CLI） 工具，可为您设置 Next.js 应用程序。在上面的命令中，您还在本课程的入门示例中使用了 --example 标志。
+
+## 目录结构
+app     // 包含应用陈谷的所有路由,组件和逻辑
+    -lib  //应用程序使用的函数  //应用程序的ui,卡片,表格和表单
+    -ui
+public  //应用程序的公共目录
+scripts
+next.config.js
+
+## 运行开发服务器
+### 安装项目的包
+pnpm  i 
+
+## 运行服务器
+
+pnpm dev  -p 5000
+
+
+## css 样式
+
+添加css 到Layout.ts 完成全局样式
+
+    global.css 里面有相关的tailwindcss 指令
+
+### tailwindcss 
+
+    一个css框架，允许在tsx会计编写实用程序类，加快开发流程
+    
+
+## 改变用户权限
+
+-rwxr-xr-x@  1 mac  staff    696 11 19 18:50 tsconfig.json
+-rwxr-xr-x@  1 mac  staff    649 11 19 18:50 tailwind.config.ts
+-rwxr-xr-x@  1 mac  staff     83 11 19 18:50 postcss.config.js
+-rwxr-xr-x@  1 mac  staff    966 11 19 18:50 package.json
+-rwxr-xr-x@  1 mac  staff    133 11 19 18:50 next.config.ts
+-rwxr-xr-x@  1 mac  staff    266 11 19 18:50 README.md
+drwxr-xr-x@  8 mac  staff    256 11 28 15:58 app
+drwxr-xr-x@  7 mac  staff    224 11 28 15:58 public
+-rwxr-xr-x@  1 mac  staff  65940 11 28 15:58 pnpm-lock.yaml
+drwxr-xr-x@ 21 mac  staff    672 11 28 15:58 node_modules
+-rwxr-xr-x@  1 mac
+### 使用chown 看用户权限
+sudo chown -R mac  nextjs-dashboard/*
+
+
+## 使用clsx 切换类名
+
+假设您要创建一个接受 status 的 InvoiceStatus 组件。状态可以是“待处理”或“已付款”。
+如果是 'paid' 的，则您希望颜色为绿色。 如果它是 'pending'，则您希望颜色为灰色
+
+```javascript
+    import clsx from 'clsx';
+ 
+export default function InvoiceStatus({ status }: { status: string }) {
+  return (
+    <span
+      className={clsx(
+        'inline-flex items-center rounded-full px-2 py-1 text-sm',
+        {
+          'bg-gray-100 text-gray-500': status === 'pending',
+          'bg-green-500 text-white': status === 'paid',
+        },
+      )}
+    >
+    // ...
+)}
+```
