添加字体修饰
添加相关p的字体修饰

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -78,3 +78,23 @@ export default function InvoiceStatus({ status }: { status: string }) {
     // ...
 )}
 ```
+# 第三章
+
+    How to add custom fonts with next/font.
+如何使用 next/font 添加自定义字体。
+
+How to add images with next/image.
+如何使用 next/image 添加图像。
+
+How fonts and images are optimized in Next.js.
+如何在 Next.js 中优化字体和图像。
+
+
+添加 p元素
+
+  <p className={`${lusitana.className} text-3xl text-pink-500`}>娃哈哈</p>
+
+
+
+  ## 链接
+    https://nextjs.org/learn/dashboard-app/optimizing-fonts-images
