next js 完成数据库之间的课程
完成数据库之间的课程

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -121,3 +121,7 @@ export default function Layout({ children }: { children: React.ReactNode }) {
     </div>
   );
 }
+
+为了改善导航体验，Next.js 会自动按路由段拆分您的应用程序。这与传统的 React SPA 不同，在传统的 React SPA 中，浏览器在初始加载时加载所有应用程序代码。
+
+按路由拆分代码意味着页面变得孤立。如果某个页面引发错误，应用程序的其余部分仍将正常工作。
