gitlab 镜像仓库测试

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -152,3 +152,14 @@ localhost:5001/seed/
 
 /app/lib/data.js 里面加载获取数据的方法，从pg 里面查询到的相关数据
 依次等待上面函数执行完后，然后执行函数函数，为阻塞
+
+
+## 访问gitlab
+
+## 访问github 
+## 生成新令牌
+
+https://github.com/settings/tokens
+
+
+## gitlab镜像仓库密码填写这个新生成的即可完成推送
