学习流水渲染() 里面添加Loading.jsx

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -160,6 +160,110 @@ localhost:5001/seed/
 ## 生成新令牌
 
 https://github.com/settings/tokens
-
+  必须使用令牌数据才能推送,输入普通密码数据无法完成推送
 
 ## gitlab镜像仓库密码填写这个新生成的即可完成推送
+
+
+## 并行获取数据
+
+Promise.all  和
+Promise.allSettled() 函数同时启动所有Promise,例如在fetchCardData()中使用函数
+promise.all()
+
+
+在处理过程中遇到了特殊字符问题，我将修复问题并直接提供您可以复制的完整文档内容：
+
+Next.js 流式渲染与页面加载性能问题整理
+
+日期：2024-12-02
+
+问题 1: 是否需要删除代码中的 setTimeout？
+
+在代码中，fetchRevenue 函数使用了以下延迟代码：
+
+await new Promise((resolve) => setTimeout(resolve, 3000));
+
+答复：
+
+是的，这段代码应该被移除，尤其是在生产环境中。这段人为延迟代码会阻塞数据加载，直接导致页面的加载速度变慢。你可以通过以下方法处理：
+	1.	直接删除延迟：
+
+// 删除这段代码
+await new Promise((resolve) => setTimeout(resolve, 3000));
+
+
+	2.	在开发环境中保留调试：
+如果需要在开发中测试延迟，可以使用以下条件：
+
+if (process.env.NODE_ENV !== 'production') {
+    await new Promise((resolve) => setTimeout(resolve, 3000));
+}
+
+问题 2: 为什么 Next.js 的流式渲染中页面仍然加载较慢？
+
+答复：
+
+Next.js 流式渲染的目标是让页面“秒开”，即便有数据加载，也会优先渲染页面的骨架部分。但如果页面的核心组件依赖某些阻塞数据请求（例如 fetchRevenue 中的延迟），页面整体的加载性能仍会受到影响。
+
+流式渲染的核心机制：
+	1.	优先显示页面框架： 快速加载页面的静态内容或骨架屏。
+	2.	分块加载动态数据： 数据通过分块逐步传输到客户端。
+	3.	数据加载完成后更新页面： 占位符会被真实数据替换。
+
+问题 3: 流式渲染是否仍需等待所有数据加载完成？
+
+答复：
+
+不完全需要。
+
+流式渲染的主要特点是：
+	1.	页面框架可以“秒开”，即使数据加载未完成，骨架屏和静态内容也会优先呈现。
+	2.	动态数据会在加载完成后逐步替换占位符，形成完整的页面。
+
+例如：
+
+import { Suspense } from 'react';
+
+function RevenueComponent() {
+  const revenue = await fetchRevenue();
+  return <p>Total Revenue: {revenue.total}</p>;
+}
+
+export default function Page() {
+  return (
+    <div>
+      <h1>Dashboard</h1>
+      <Suspense fallback={<p>Loading revenue...</p>}>
+        <RevenueComponent />
+      </Suspense>
+    </div>
+  );
+}
+
+效果：
+	•	标题 Dashboard 会立刻显示。
+	•	Revenue 部分会先显示“Loading…”，然后替换为数据内容。
+
+问题 4: 如何优化页面渲染速度？
+
+	1.	移除阻塞代码： 删除 setTimeout 等人为延迟。
+	2.	并发加载数据： 使用 Promise.all 提高数据请求效率。
+
+const [revenue, invoices] = await Promise.all([
+    fetchRevenue(),
+    fetchLatestInvoices(),
+]);
+
+
+	3.	使用骨架屏或占位符：
+在 loading.tsx 或 Suspense 的 fallback 中展示临时内容，提升用户体验。
+	4.	优化数据库查询：
+减少查询时间，避免不必要的字段或复杂查询逻辑。
+
+总结
+
+流式渲染的核心优势是“先显示，后加载”。通过以下方法可以实现真正的“秒开”体验：
+	1.	避免阻塞代码（如延迟）。
+	2.	提供良好的骨架屏设计。
+	3.	并行处理数据请求。
