--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -267,3 +267,201 @@ const [revenue, invoices] = await Promise.all([
 	1.	避免阻塞代码（如延迟）。
 	2.	提供良好的骨架屏设计。
 	3.	并行处理数据请求。
+
+
+
+## 修复问题报错
+以下是帮助你排查问题的系统化思路和总结的经验，供你参考。我们将从问题描述、排查方法、解决流程、以及总结经验等方面逐步整理。
+
+问题排查思路
+
+	1.	问题描述清晰化
+任何排查的第一步是准确描述问题，明确问题的表现和触发条件。例如：
+	•	报错信息：“不能将类型‘{ data: Revenue[]; }’分配给类型‘IntrinsicAttributes’。”
+	•	出现场景：当传递 data 属性给组件 RevenueChart 时。
+	•	期望结果：RevenueChart 接受 data 属性并正常工作。
+	2.	初步分析问题
+根据报错信息判断可能的原因：
+	•	IntrinsicAttributes 提示 TypeScript 将组件视为 DOM 元素或未声明 props 的 React 组件。
+	•	组件未定义或未正确接收 data 属性。
+	3.	从以下角度检查
+	•	组件定义是否正确：
+	•	是否显式声明了 props 类型？
+	•	props 的类型是否符合传递的数据结构？
+	•	组件的调用方式：
+	•	是否按正确方式传递了 data？
+	•	数据类型是否与 props 类型匹配？
+	•	数据类型：
+	•	Revenue[] 的定义是否正确？
+	•	数据来源是否符合 Revenue 的结构？
+	4.	定位根因
+	•	对照每个检查点逐一验证代码，使用 TypeScript 和 IDE 的类型提示来辅助排查。
+
+具体排查与解决步骤
+
+	1.	检查组件的 props 定义
+确保组件 RevenueChart 显式声明了 props，并包含 data 属性。例如：
+
+interface RevenueChartProps {
+  data: Revenue[];
+}
+
+如果未定义，添加正确的类型声明。
+
+	2.	检查组件调用方式
+确认传递给 RevenueChart 的 data 属性类型符合定义。例如：
+
+<RevenueChart data={revenue} />
+
+确保 revenue 的类型为 Revenue[]，与 props 定义一致。
+
+	3.	检查 Revenue 类型定义
+确认 Revenue 的类型是否符合预期。例如：
+
+export interface Revenue {
+  month: string;
+  revenue: number;
+}
+
+
+	4.	检查数据来源
+验证 fetchRevenue 的返回值是否符合类型定义：
+
+export async function fetchRevenue(): Promise<Revenue[]> {
+    // 模拟数据
+    return [
+        { month: "January", revenue: 1000 },
+        { month: "February", revenue: 1200 },
+    ];
+}
+
+
+	5.	测试修复后代码
+修复以上问题后，重新运行项目，确保类型错误消失且功能正常。
+
+总结经验
+
+1. 使用 TypeScript 强制定义组件 props 类型
+
+始终显式定义组件的 props，避免隐式推断。例如：
+
+interface RevenueChartProps {
+  data: Revenue[];
+}
+
+通过强类型定义，可以在开发阶段捕获类型错误，避免运行时问题。
+
+2. 利用 TypeScript 的类型检查工具
+
+	•	启用严格模式：确保项目中 tsconfig.json 中启用了 strict 选项：
+
+"strict": true
+
+
+	•	使用 IDE 提示：在组件或数据类型未匹配时，TypeScript 会提供详细提示。
+
+3. 理解 React 和 TypeScript 的类型关系
+
+	•	IntrinsicAttributes：
+	•	是 React 内部用于描述 JSX 属性的类型（如 key）。
+	•	当组件未声明 props 或类型错误时，TypeScript 会尝试使用 IntrinsicAttributes 匹配传入的属性，导致报错。
+	•	React.FC vs 函数组件：
+	•	推荐显式定义 props 类型，而非依赖 React.FC。
+
+4. 使用 Mock 数据进行测试
+
+在数据来源（如 fetchRevenue）返回真实数据之前，使用 Mock 数据验证组件逻辑是否正常。
+
+最终总结
+
+问题排查要点：
+	•	确保组件的 props 类型定义正确。
+	•	确保数据来源与组件的 props 类型一致。
+	•	使用工具（如 TypeScript 严格模式和 IDE）自动检查类型错误。
+	•	验证修复后功能的正确性。
+
+通过这些步骤，你可以快速排查类似问题，并在未来开发中更高效地处理类型错误。
+
+在 React 中，props（全称 “properties”）用于组件之间传递数据。它是组件的输入，定义了组件的行为和展示内容。以下是针对你案例中 props 的数据传输流程的详细分析，以及如何理解它在组件中的作用。
+
+数据传输流程：从父组件到子组件
+
+	1.	数据来源（父组件负责数据准备）
+在你的案例中，父组件通过异步函数 fetchRevenue() 获取收入数据：
+
+const revenue = await fetchRevenue();
+
+	•	fetchRevenue() 返回一个 Revenue[] 类型的数据，这是一个数组，包含每月的收入详情。
+	•	这个数据被存储在父组件的变量 revenue 中。
+
+	2.	通过 props 将数据传递给子组件
+父组件通过 props 将 revenue 数据传递给 RevenueChart 子组件：
+
+<RevenueChart data={revenue} />
+
+	•	RevenueChart 是子组件。
+	•	data 是父组件传递的属性名称。
+	•	revenue 是传递的数据值，类型为 Revenue[]。
+
+	3.	子组件接收 props 并使用
+在 RevenueChart 子组件中，通过 props 接收父组件传递的 data：
+
+interface RevenueChartProps {
+  data: Revenue[];
+}
+
+export default function RevenueChart({ data }: RevenueChartProps) {
+  // 使用 data 进行图表绘制
+  const { yAxisLabels, topLabel } = generateYAxis(data);
+}
+
+	•	RevenueChartProps 定义了 props 的类型，表明子组件 RevenueChart 接受一个 data 属性，并且这个属性的类型是 Revenue[]。
+	•	在组件定义中，通过解构 props 的方式直接获取 data 属性，供子组件逻辑使用。
+
+	4.	子组件根据 props 渲染内容
+子组件使用传递的数据（data）生成柱状图，并在页面中渲染出来：
+
+{data.map((month) => (
+  <div key={month.month} className="flex flex-col items-center gap-2">
+    <div
+      className="w-full rounded-md bg-blue-300"
+      style={{
+        height: `${(month.revenue / topLabel) * chartHeight}px`,
+      }}
+    ></div>
+    <p>{month.month}</p>
+  </div>
+))}
+
+	•	data.map() 遍历 data，为每个月生成一个柱子。
+	•	使用 props 的值（data）动态调整柱子的高度和显示内容。
+
+关键概念：如何理解 props？
+
+	1.	props 是父组件和子组件之间的桥梁
+	•	父组件通过 props 将数据和参数传递给子组件，子组件通过 props 使用这些数据来渲染内容。
+	•	数据流向是单向的：从父组件流向子组件。
+	2.	props 是只读的
+	•	子组件不能直接修改 props 的值。
+	•	如果需要改变数据，应该在父组件中修改数据并重新传递给子组件。
+	3.	props 提高了组件的复用性
+	•	通过传递不同的数据给同一个子组件，可以实现不同的渲染效果。例如，你可以传递不同的 revenue 数据给 RevenueChart 来渲染不同的收入图表。
+
+数据传输的完整流程（图示）
+
+	1.	数据获取（父组件）：
+	•	父组件通过 fetchRevenue() 获取数据，存储到变量 revenue 中。
+	2.	通过 props 传递数据（父组件 → 子组件）：
+	•	父组件在 JSX 中调用子组件 <RevenueChart data={revenue} />，将数据通过 props 传递。
+	3.	接收和使用 props（子组件）：
+	•	子组件通过类型化的 props 接收数据：{ data }: RevenueChartProps。
+	•	使用 data 来实现图表绘制等功能。
+
+总结：数据传输的流程
+
+	1.	父组件准备数据：通过异步函数获取数据并保存在变量中。
+	2.	通过 props 传递数据：在调用子组件时，将数据作为 props 属性传递。
+	3.	子组件接收数据：通过 props 接收并使用父组件传递的数据。
+	4.	子组件渲染内容：根据传递的数据动态生成 UI。
+
+props 的本质是 React 组件设计中实现数据单向流动的机制，保证了数据的流向清晰且可控。
