--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -465,3 +465,63 @@ export default function RevenueChart({ data }: RevenueChartProps) {
 	4.	子组件渲染内容：根据传递的数据动态生成 UI。
 
 props 的本质是 React 组件设计中实现数据单向流动的机制，保证了数据的流向清晰且可控。
+
+##
+
+##  添加搜索分页,为什么要使用URL搜索参数
+
+
+## 添加搜索功能
+
+useSearchParams 
+允许您访问当前 URL 的参数。例如，此 URL /dashboard/invoices?page=1&query=pending 的搜索参数将如下所示：{page： '1'， query： 'pending'}。
+
+usePathname - Lets you read the current URL's pathname. For example, for the route /dashboard/invoices, usePathname would return '/dashboard/invoices'.
+usePathname - 允许您读取当前 URL 的路径名。例如，对于路由 /dashboard/invoices，usePathname 将返回 '/dashboard/invoices'
+
+useRouter - Enables navigation between routes within client components programmatically. There are multiple methods you can use.
+useRouter - 以编程方式在客户端组件内的路由之间启用导航。您可以使用多种方法。
+
+
+# 按照一下方式实现
+
+  Capture the user's input.
+1. 捕获用户的输入。
+Update the URL with the search params.
+使用 search 参数更新 URL。
+Keep the URL in sync with the input field.
+2. 使 URL 与输入字段保持同步。
+Update the table to reflect the search query.
+更新表以反映搜索查询。
+  sg
+
+3.  
+
+## URLSearchParams 
+
+一个webpai 提供操作url 查询参数的使用工具方法，获取参数例如?page=1&query=a 
+
+# 现在，您有了查询字符串。你可以使用 Next.js 的 useRouter 和 usePathname 钩子来更新 URL。
+
+##  
+  从 'next/navigation' 导入 useRouter 和 usePathname，并在 handleSearch 中使用 useRouter（） 中的 replace 方法：
+
+    ${pathname} is the current path, in your case, "/dashboard/invoices".
+
+
+${pathname} 是当前路径，在本例中为 “/dashboard/invoices”。
+
+``` 
+   replace(`${pathname}?${params.toString()}`)
+```
+  当用户在搜索栏中键入内容时，params.toString（） 会将此输入转换为 URL 友好的格式。
+  eplace(${pathname}?${params.toString()}) 使用用户的搜索数据更新 URL。例如，如果用户搜索“Lee”，则为 /dashboard/invoices？query=lee。
+  要确保 input 字段与 URL 同步并在共享时填充，您可以通过从 searchParams 读取来将 defaultValue 传递给 input：
+
+  如果你使用 state 来管理 input 的值，你可以使用 value 属性使其成为受控组件。这意味着 React 将管理输入的状态。
+
+  但是，由于您没有使用 state，因此可以使用 defaultValue。这意味着本机输入将管理自己的状态。这没关系，因为您将搜索查询保存到 URL 而不是 state。
+
+  最后，您需要更新 table 组件以反映搜索查询
+
+  ## 只有最新版本的nextjs 支持
