添加搜索页面

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -524,4 +524,14 @@ ${pathname} 是当前路径，在本例中为 “/dashboard/invoices”。
 
   最后，您需要更新 table 组件以反映搜索查询
 
-  ## 只有最新版本的nextjs 支持
+
+
+##  只有最新版本的nextjs 支持 next_config 里面的ppr 
+
+    pnpm -i next@latest
+
+## 添加分页
+
+  引入搜索功能，一次显示6张发票，data.ts中的fetchFilteredInvoices() 函数每页最多返回6张发票
+
+  
