增加分页功能
增加分页

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -514,6 +514,7 @@ ${pathname} 是当前路径，在本例中为 “/dashboard/invoices”。
 ``` 
    replace(`${pathname}?${params.toString()}`)
 ```
+
   当用户在搜索栏中键入内容时，params.toString（） 会将此输入转换为 URL 友好的格式。
   eplace(${pathname}?${params.toString()}) 使用用户的搜索数据更新 URL。例如，如果用户搜索“Lee”，则为 /dashboard/invoices？query=lee。
   要确保 input 字段与 URL 同步并在共享时填充，您可以通过从 searchParams 读取来将 defaultValue 传递给 input：
@@ -534,4 +535,36 @@ ${pathname} 是当前路径，在本例中为 “/dashboard/invoices”。
 
   引入搜索功能，一次显示6张发票，data.ts中的fetchFilteredInvoices() 函数每页最多返回6张发票
 
-  
+
+# 第十二章  Learn how to mutate data with Server Actions.
+了解如何使用 Server Actions 更改数据。
+
+
+What React Server Actions are and how to use them to mutate data.
+什么是 React Server Actions 以及如何使用它们来改变数据。
+
+How to work with forms and Server Components.
+如何使用表单和 Server Components。
+
+Best practices for working with the native formData object, including type validation.
+使用本机 formData 对象的最佳实践，包括类型验证。
+
+How to revalidate the client cache using the revalidatePath API.
+如何使用 revalidatePath API 重新验证客户端缓存。
+
+How to create dynamic route segments with specific IDs.
+如何创建具有特定 ID 的动态路由段。
+
+
+eact Server Actions 允许你直接在服务器上运行异步代码。它们消除了创建 API 终端节点来更改数据的需要。相反，您可以编写在服务器上执行的异步函数，并且可以从 Client 或 Server Components 调用这些函数。
+
+安全性是 Web 应用程序的重中之重，因为它们可能容易受到各种威胁。这就是 Server Actions 的用武之地。它们提供有效的安全解决方案，防止不同类型的攻击，保护您的数据，并确保授权访问。Server Actions 通过 POST 请求、加密闭包、严格输入检查、错误消息哈希和主机限制等技术来实现这一点，所有这些技术协同工作，以显著提高应用程序的安全性。
+
+
+# Using forms with Server Actions
+将表单与 Server Actions 结合使用
+
+// 自动接收包含捕获数据的本机FormData 对象
+在 React 中，你可以使用 <form> 元素中的 action 属性来调用操作。该操作将自动接收包含捕获数据的本机 FormData 对象。
+
+
