创建发票更新发票

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -568,3 +568,10 @@ eact Server Actions 允许你直接在服务器上运行异步代码。它们消
 在 React 中，你可以使用 <form> 元素中的 action 属性来调用操作。该操作将自动接收包含捕获数据的本机 FormData 对象。
 
 
+import {sql} from '@vercel/postgres';
+//于将 Route Segments 存储在用户的浏览器中一段时间。除了预取之外，此缓存还确保用户可以在路由之间快速导航，同时减少向服务器发出的请求数,由于您正在更新 invoices 路由中显示的数据，因此您需要清除此缓存并触发对服务器的新请求。您可以使用 Next.js 中的 revalidatePath 函数执行此操作：
+
+
+import { revalidatePath } from 'next/cache';
+// 此时，您还需要将用户重定向回 /dashboard/invoices 页面。您可以使用 Next.js 中的 redirect 函数执行此操作：
+
