--- a/014_nextjs_dashboard/nextjs-dashboard/app/ui/invoices/1.md
+++ b/014_nextjs_dashboard/nextjs-dashboard/app/ui/invoices/1.md
@@ -124,3 +124,35 @@ function PaginationArrow({
     </Link>
   );
 }
+
+# Server Actions 与Next.js 缓存深度集成,通过Server Action 提交表单时 
+
+    不仅可以使用该表单来更改数据，还可以使用revakidatePath HerevalidateTag 等api 验证关联的缓存
+
+  使用server action 的好处 渐进式增强。
+
+
+# 发票功能改写
+
+    创建，更新，删除发票的功能
+
+        什么是React Server Actions 以及如何使用它们改变数据
+
+        如何使用表单和Server Components
+
+        使用本机formData对象的最佳实践,包括类型验证
+
+
+        如何使用revalidatePath api 重新验证客户端缓存
+
+        如何创建具有特定ID的动态路由段
+
+## 编写创建发票的功能
+    action 属性被认为是一个特殊的prop 意味着React 构建在它之上以允许调用操作 
+
+    在后台,server Actions 会创建一个POST API 段带你
+
+### 在actions 获取formData的值
+    const rawFormData = Object.fromEntries(formData.entries())
+
+
