--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -824,3 +824,35 @@ export async function createInvoice(formData:FormData){
 
 
 ​	
+
+# 第十章更新数据
+
+## 	准备知识点
+
+- 将 Route Segments 存储在用户的浏览器中一段时间。除了预取之外，此缓存还确保用户可以在路由之间快速导航，同时减少向服务器发出的请求数,由于您正在更新 invoices 路由中显示的数据，因此您需要清除此缓存并触发对服务器的新请求。您可以使用 Next.js 中的 revalidatePath 函数执行此操作：
+
+    ​		import { revalidatePath } from 'next/cache';
+
+    ​	
+
+- ​	验证数据类型  	const CreateInvoice= FormSchema.omit({id:true,date:true})
+
+-   revalidatePath('/dashboard/invoices');
+
+    ​    
+
+    ​    redirect('/dashboard/invoices');
+
+- const { customerId, amount, status } = UpdateInvoice.parse({
+
+    ​        customerId: formData.get('customerId'),
+
+    ​        amount: formData.get('amount'),
+
+    ​        status: formData.get('status'),
+
+    ​      });
+
+- 
+
+​		
