完成删除数据
删除数据

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -854,5 +854,13 @@ export async function createInvoice(formData:FormData){
     ​      });
 
 - 
-
+## 操作要点
+   从fromData 提取数据
+   使用Zod 
+   将金额转换成美分
+   将变量传递给sql 查询
+   调用revalidatePath 清楚客户端缓存发出新的服务器青秀区
+   调用redirect 将用户重定向到发票页面
+## 删除发票
+  
 ​		
