--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -862,5 +862,29 @@ export async function createInvoice(formData:FormData){
    调用revalidatePath 清楚客户端缓存发出新的服务器青秀区
    调用redirect 将用户重定向到发票页面
 ## 删除发票
-  
-​		
+   1. actions 添加处理函数 里面添加sql 语句 删除操作
+   2. 需要使用bind 来传递id  
+   3. button 里面添加form表单， 
+   4. action里面添加 数据
+
+## Handling Erros 处理错误
+javascript try/catch 语句和Next.js API 优雅地处理错误
+
+/app/lib/actions.ts 
+​```ts
+  export async function deleteInvoice(id: string) {
+  throw new Error('Failed to Delete Invoice');
+ 
+  // Unreachable code block
+  try {
+    await sql`DELETE FROM invoices WHERE id = ${id}`;
+    revalidatePath('/dashboard/invoices');
+    return { message: 'Deleted Invoice' };
+  } catch (error) {
+    return { message: 'Database Error: Failed to Delete Invoice' };
+  }
+}
+```
+尝试删除发票时,会看到错误
+## /dashboard/invoices/error.tsx 
+ 用来处理遇见的错误
