aria 添加相关注释

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -888,3 +888,9 @@ javascript try/catch 语句和Next.js API 优雅地处理错误
 尝试删除发票时,会看到错误
 ## /dashboard/invoices/error.tsx 
  用来处理遇见的错误
+
+
+# next.js 使用ESLint 辅助功能
+
+packaget 添加
+pnpm lint 
