完善auth.ts,完成密码校验

--- a/014_nextjs_dashboard/1.md
+++ b/014_nextjs_dashboard/1.md
@@ -899,3 +899,46 @@ pnpm lint
 ## 添加用户验证
 
 pnpm i next-auth@beta
+
+
+auth.ts 文件中的 authorize 函数，确保它返回的是一个用户对象。
+
+import NextAuth from 'next-auth';
+import Credentials from 'next-auth/providers/credentials';
+import { sql } from '@vercel/postgres';
+import bcrypt from 'bcrypt';
+
+async function getUser(email: string) {
+  const user = await sql`SELECT * FROM users WHERE email = ${email}`;
+  return user.rows[0];
+}
+
+export default NextAuth({
+  providers: [
+    Credentials({
+      async authorize(credentials) {
+        const { email, password } = credentials;
+
+        const user = await getUser(email);
+        if (!user) {
+          throw new Error('No user found');
+        }
+
+        const isValidPassword = await bcrypt.compare(password, user.password);
+        if (!isValidPassword) {
+          throw new Error('Invalid password');
+        }
+
+        // 返回用户对象，而不是字符串
+        return {
+          id: user.id,
+          name: user.name,
+          email: user.email,
+        };
+      },
+    }),
+  ],
+});
+
+
+### 解决方案
