--- a/014_nextjs_dashboard/nextjs-dashboard/data/数据库信息.md
+++ b/014_nextjs_dashboard/nextjs-dashboard/data/数据库信息.md
@@ -1,9 +1,17 @@
+---
+titile: "数据库信息"
+date: "2024-03-21"
+tag: ["数据库"]
+---
+```sql
 GRANT INSERT ON nextjs.users TO 'kouhang'@'localhost';
 FLUSH PRIVILEGES;
-
+```
+```sql
 GRANT ALL PRIVILEGES ON nextjs.* TO 'kouhang'@'localhost';
 FLUSH PRIVILEGES;
-
+```
+```sql
 CREATE TABLE users (
     id INT AUTO_INCREMENT PRIMARY KEY,
     username VARCHAR(50) UNIQUE NOT NULL,
@@ -14,7 +22,8 @@ CREATE TABLE users (
     last_login TIMESTAMP NULL,
     status ENUM('active', 'inactive', 'banned') DEFAULT 'active'
 );
-
+```
+```tsx
 import { NextResponse } from 'next/server';
 import { NextRequest } from 'next/server';
 import { verify } from 'jsonwebtoken';
@@ -44,7 +53,5 @@ export function middleware(request: NextRequest) {
 
   return NextResponse.next();
 }
+```
 
-export const config = {
-  matcher: '/api/protected/:path*'
-}
